# python-core

./: .pre-commit-config.yaml  README.md  ruff.toml
core/: pyproject.toml
core/src/core/: file_handler.py  logger.py
core/src/core/schema/: apply_schema.py
core/tests/: conftest.py
